--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  height: 100vh;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form{
+  display:block;
+  position: relative;
+
+}
+
+form:after{
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: 1;
+  background-image: linear-gradient(to bottom right, #FFCE, #FE4880);
 }
