--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     background-color: #14BF9D;
     left: 0;
     color: white;
-    weight: 800;
+    font-weight: 800;
   }
   
   .right {
@@ -25,4 +25,17 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+  }
+
+  .centered-form{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width:100%;
+    height:80%;
+    margin:auto;
+    justify-content: center;
+  align-items: center;
   }
