--- a/src/Login.css
+++ b/src/Login.css
@@ -54,6 +54,10 @@
     width:80%;
 }
 
+input:focus{
+    outline: none;
+}
+
 a:link {
     text-decoration: none;
 }
@@ -68,12 +72,14 @@ a:visited {
     padding: 0;
     text-align: center;
     width: 50%;
+    height:100%;
     border-right: 1px solid lightslategray;
 }
 
 .linkB{
     margin:0;
     padding: 0;
+    height:100%;
     text-align: center;
     width: 50%;
 }
@@ -92,3 +98,9 @@ a:visited {
 }
 
 
+
+.iconImage{
+    border-radius: 100%;
+    width: 100%;
+    height:100%
+}
